--- a/codes/P01_API_Request_usgs.ipynb
+++ b/codes/P01_API_Request_usgs.ipynb
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 1: Converting the imported \"feature\" json data into pandas dataframe"
+    "#### Step 1: Converting the imported \"feature\" json data into pandas dataframe"
    ]
   },
   {
