--- a/codes/P01_API_Request_usgs.ipynb
+++ b/codes/P01_API_Request_usgs.ipynb
@@ -147,7 +147,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 02. Reading the full sequence, with two-year data seperation"
+    "### 02. Reading the full sequence:\n",
+    "#### [As USGS API pull count is limited, I split the pull command]"
    ]
   },
   {
@@ -573,7 +574,7 @@
    "source": [
     "for start_num in range(1970, 2021, 1):\n",
     "    \n",
-    "    # First half of the year\n",
+    "    # First quarter of the year\n",
     "    \n",
     "    start_str = f\"\"\"{start_num}-01-02\"\"\"\n",
     "    end_str = f\"\"\"{start_num}-03-01\"\"\"\n",
@@ -603,7 +604,7 @@
     "    df.to_csv(file_path)\n",
     "    \n",
     "    \n",
-    "    # Second half of the year\n",
+    "    # Second quarter of the year\n",
     "    \n",
     "    start_str = f\"\"\"{start_num}-03-02\"\"\"\n",
     "    end_str = f\"\"\"{start_num}-06-01\"\"\"\n",
@@ -618,7 +619,7 @@
     "    file_path = \"../datasets/\" + \"eq_california_yr_\" + str(start_num) + \"_2_raw\" + \".csv\"\n",
     "    df.to_csv(file_path)\n",
     "    \n",
-    "    # Third half of the year\n",
+    "    # Third quarter of the year\n",
     "    \n",
     "    start_str = f\"\"\"{start_num}-06-02\"\"\"\n",
     "    end_str = f\"\"\"{start_num}-09-01\"\"\"\n",
@@ -633,7 +634,7 @@
     "    file_path = \"../datasets/\" + \"eq_california_yr_\" + str(start_num) + \"_3_raw\" + \".csv\"\n",
     "    df.to_csv(file_path)\n",
     "    \n",
-    "    # Fourth half of the year\n",
+    "    # Fourth quarter of the year\n",
     "    \n",
     "    start_str = f\"\"\"{start_num}-09-02\"\"\"\n",
     "    end_str = f\"\"\"{start_num + 1}-01-01\"\"\"\n",
@@ -642,9 +643,9 @@
     "    Params[\"min_date\"] = start_str # Minimum date for reporting the data\n",
     "    Params[\"max_date\"] = end_str # Maximum date for reporting the data\n",
     "\n",
-    "\n",
+    "    # Getting the dataframe calling the custom-built function\n",
     "    df = get_EQ_USGS_df(Params)\n",
-    "    \n",
+    "    # Saving the dataframe as a .csv file\n",
     "    file_path = \"../datasets/\" + \"eq_california_yr_\" + str(start_num) + \"_4_raw\" + \".csv\"\n",
     "    df.to_csv(file_path)"
    ]
