--- a/codes/P02_Data_Cleaning.ipynb
+++ b/codes/P02_Data_Cleaning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Time-series based analysis of Earthquake Risk Factors\n",
     "\n",
-    "### Part 2: Cleaning the imported data and doing a brief EDA for early assessment. Finally pickling the merged dataframe into a global dataframe.\n",
+    "### Part 2: Cleaning the imported data and doing a brief EDA for early assessment.\n",
     "\n",
     "In this notebook, I cleaned the imported API dataframe and saved it as a clean version into \"../datasets\" folder for further processing."
    ]
@@ -42,10 +42,15 @@
     "\n",
     "from EQ_USGS import clean_EQ_USGS_df\n",
     "\n",
-    "import pickle\n",
-    "\n",
     "import glob\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reading in the dataframes and merging them into a global one:"
    ]
   },
   {
@@ -232,6 +237,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning the dataframe using the built function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -280,6 +292,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Figure: Total earthquake data for the past 50 years. There was a total of 85 earthquakes larger than magnitude 6 (gray line in top figure). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -314,12 +333,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(\"Hello World!\")"
+    "#### Figure: The moment magnitude distribution is also shown by histogram. The magnitude distribution closely follows Poisson’s distribution"
    ]
   },
   {
@@ -327,7 +344,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Hello World!\")"
+   ]
   }
  ],
  "metadata": {
