--- a/codes/P03_EDA_eq.ipynb
+++ b/codes/P03_EDA_eq.ipynb
@@ -36,8 +36,7 @@
     "## for geospatial\n",
     "import folium\n",
     "import geopy\n",
-    "## for deep learning\n",
-    "import minisom\n",
+    "\n",
     "\n",
     "## for machine learning\n",
     "from sklearn import preprocessing, cluster"
@@ -47,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2.1: Importing the saved clean data from earthquake"
+    "### Part 2.1: Importing the saved clean data from earthquake, and doing some house-keeping on the dataframe."
    ]
   },
   {
@@ -271,12 +270,12 @@
     "file_path = \"../datasets/\" + \"combined_eq_california\" + \"_clean\" + \".csv\"\n",
     "\n",
     "df_eq = pd.read_csv(file_path)\n",
-    "\n",
+    "# Dropping unnecessary columns\n",
     "df_eq.drop(columns = \"Unnamed: 0\", inplace = True)\n",
-    "\n",
+    "# Fixing time column datatype\n",
     "df_eq[\"time\"] = pd.to_datetime(df_eq[\"time\"])\n",
     "\n",
-    "#Adding name column\n",
+    "#Adding name column for Folium map pop-ups\n",
     "df_eq[\"name_mag\"] = df_eq[\"mag\"].apply(lambda x: \"M: \" + str(x) + \" / \")\n",
     "\n",
     "df_eq[\"name_date\"] = df_eq[\"time\"].apply(lambda x: \" \" + str(x.date())+ \" / \")\n",
@@ -284,18 +283,25 @@
     "df_eq[\"name\"] = df_eq[\"name_mag\"] + df_eq[\"name_date\"] + df_eq[\"place\"]\n",
     "\n",
     "df_eq.drop(columns=[\"name_mag\", \"name_date\"], inplace = True)\n",
-    "\n",
+    "# Sorting the dataframe with respect to time\n",
     "df_eq = df_eq.sort_values(by=\"time\")\n",
-    "\n",
+    "#Converting to time-series with respect to \"time\" column\n",
     "df_eq.set_index('time', inplace=True)\n",
-    "\n",
+    "# There were only some depth values missing, so imputing them, not a big deal of imputing processes\n",
     "df_eq.fillna(df_eq.mean(), inplace = True)\n",
-    "\n",
+    "# Finally save the dataframe as time-series csv file\n",
     "file_path = \"../datasets/\" + \"combined_eq_california\" + \"_timeseries\" + \".csv\"\n",
     "\n",
     "df_eq.to_csv(file_path)\n",
     "\n",
     "df_eq.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### All the column datatypes look fine!"
    ]
   },
   {
@@ -791,6 +797,13 @@
     "\n",
     "## plot the map\n",
     "map_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Figure: most large EQ's were along the coast"
    ]
   },
   {
@@ -1320,13 +1333,6 @@
    "source": [
     "In addition to the main fault activites, there was a parallel fault (presumably) active as well!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
