--- a/codes/P05_feature_eng_parkfield_EQ.ipynb
+++ b/codes/P05_feature_eng_parkfield_EQ.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Time-series based analysis of Earthquake Risk Factors\n",
+    "\n",
+    "### Part 5: Engineering a few features based on spatial clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Importing the required libraries:"
    ]
   },
@@ -29,13 +38,6 @@
     "\n",
     "import pickle"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -318,7 +320,7 @@
     "df_lp_eq[\"time_seconds\"] = time\n",
     "\n",
     "failure_event = df_lp_eq[df_lp_eq[\"mag\"] == df_lp_eq[\"mag\"].max()]\n",
-    "\n",
+    "# Adding the time_to_failure label\n",
     "df_lp_eq[\"time_to_failure_sec\"] = np.array(df_lp_eq[\"time_seconds\"]) - np.array(failure_event[\"time_seconds\"])\n"
    ]
   },
@@ -462,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking if failure is correctly zero:"
+    "Checking if the time for main earthquake is correctly zero:"
    ]
   },
   {
@@ -570,6 +572,13 @@
    ],
    "source": [
     "plt.plot(df_lp_eq[\"time_to_failure_sec\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure: the time to failure evolution with event number. Irregular time-series!"
    ]
   },
   {
@@ -763,15 +772,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Moving clusters design"
+    "# Moving clusters design:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1655,6 +1657,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Figure: Correlation between features and the target label (time_to_failure). As can be seen, these are strong indicators of the time to failure. See GitHub repository for full description of columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear regression on the features and time_to_failure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1672,9 +1688,8 @@
    ],
    "source": [
     "\n",
-    "# Step 1: Assemble our X and y variables\n",
+    "#Assemble our X and y variables\n",
     "\n",
-    "# We need an X matrix that is n-by-p (in this case, p = 1)\n",
     "X = cluster_df.drop(columns=[\"time_to_failure\", \"long_cent\", \"lat_cent\"])\n",
     "\n",
     "\n",
@@ -1823,6 +1838,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure: Feature importance based on linear regression on Loma Prieta earthquake."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -1838,13 +1860,6 @@
    "source": [
     "print(\"Hello World!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
