--- a/codes/P03_EDA_eq.ipynb
+++ b/codes/P03_EDA_eq.ipynb
@@ -29,12 +29,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "import pickle\n",
     "\n",
     "## for geospatial\n",
     "import folium\n",
     "import geopy\n",
-    "\n",
+    "from mpl_toolkits.basemap import Basemap\n",
     "\n",
     "## for machine learning\n",
     "from sklearn import preprocessing, cluster"
@@ -908,15 +909,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits.basemap import Basemap"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -1767,7 +1759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
